# Linux_Application_Development

./: README.md
01_GitBuildReq/: Hello.c
02_TerminalProject/: Instruction.md  Makefile  Show.c  file.txt
03_Multifile/: Makefile  README.md
04_Text/: README.md  randomize.sh
05_Debugging/: Makefile  concat.sh  gdb_run1  gdb_run2  range.c
06_Regexps/: Makefile  check_regex.sh  esub.c
07_TracingFencing/: Makefile  injection_remove.c  move.c  with_strace_tests.sh  without_strace_tests.sh
08_Environmental/: Makefile.am  configure.ac  rhasher.c  simple_test.sh  simplt_test.sh
09_I18n/: Makefile.am  configure.ac  predict_number.pot  ru.po
09_I18n/po/: Makefile.am  predict_number.pot  ru.po
09_I18n/src/: Makefile.am  predict_number.c
09_I18n/src/.deps/: predict_number.Po
12_Documenting/: Makefile.am
12_Documenting/po/: Makefile.am
